--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
+<style>
+.flex-container {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+</style>
 	</head>
 	<body>
+		<div id="container" class="flex-container">
+			<button id="rock">Rock</button>
+			<button id="paper">Paper</button>
+			<button id="scissors">Scissors</button>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
