--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
+	flex-direction: column;
 }
 </style>
 	</head>
@@ -18,6 +19,9 @@
 			<button id="rock">Rock</button>
 			<button id="paper">Paper</button>
 			<button id="scissors">Scissors</button>
+			<div id="results"></div>
+			<div id="score"></div>
+			<div id="outcome"></div>
 		</div>
 		<script src="script.js"></script>
 	</body>
